# TADIGA

./: .travis.yml  CMakeLists.txt  Dockerfile  README.md
cmake/: Boost-build.cmake.in  OpenCASCADE-build.cmake.in  OpenCASCADE.cmake  Trilinos-build.cmake.in  Trilinos.cmake  yaml-cpp-build.cmake.in
cmake/Modules/: CodeCoverage.cmake  FindOpenCASCADE.cmake  Findyaml-cpp.cmake
scripts/: do-configure-macos.sh
src/: CMakeLists.txt  tadiga.cc  tadiga_IGES_geometry.cc  tadiga_IGES_geometry.h  tadiga_factory.cc  tadiga_factory.h  tadiga_geometry.cc  tadiga_geometry.h  tadiga_geometry_factory.cc  tadiga_geometry_factory.h  tadiga_main.cc  tadiga_parser.cc  tadiga_types.h  tadiga_version.h.in
src/test/: CMakeLists.txt  tadiga_IGES_geometry_test.cc  tadiga_geometry_test.cc  tadiga_parser_test.cc
